<resources>
    <string name="app_name">f_hero</string>
    <string name="android">Android</string>
    <string name="create_deck">Create Deck</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_deck">Choose Deck</string>
    <string name="create_new_deck">Create Deck</string>
    <string name="tap_to_flip">Tap To Flip</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>