<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable
            name="fcard"
            type="com.example.f_hero.FlashCardFragment" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context=".flashCardFragment">
        <TextView
            android:id="@+id/card_back"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/text_view_border"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/one_jockey"
            android:gravity="center"
            android:text="@{fcard.currentCard.back}"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateClickableBoundsCheck" />
        <TextView
            android:id="@+id/card_front"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/one_jockey"
            android:text='@{fcard.currentCard.front}'
            android:textColor="@color/black"
            android:background="@drawable/text_view_border"
            android:textAlignment="center"
            android:textSize="24sp"
            android:gravity="center"
            app:strokeWidth="2dp"
            app:strokeColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.55" />

        <TextView
            android:id="@+id/tap_to_flip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_flip"
            android:textSize="20sp"
            android:fontFamily="@font/one_jockey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/prevButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/white"
            android:bottomLeftRadius="40sp"
            android:fontFamily="@font/one_jockey"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:topLeftRadius="40sp"
            app:shapeAppearance="@style/ShapeAppearance.f_hero.left_round"
            app:backgroundTint="@color/white"
            app:strokeWidth="2dp"
            app:strokeColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/create_button"
            app:layout_constraintEnd_toStartOf="@+id/nextButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/nextButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="32dp"
            android:bottomRightRadius="40sp"
            android:fontFamily="@font/one_jockey"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:topRightRadius="40sp"
            app:shapeAppearance="@style/ShapeAppearance.f_hero.right_round"
            app:backgroundTint="@color/white"
            app:strokeWidth="2dp"
            app:strokeColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/delete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/prevButton" />

        <Button
            android:id="@+id/create_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/one_jockey"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:shapeAppearance="@style/ShapeAppearance.f_hero.left_round"
            app:backgroundTint="@color/white"
            app:strokeWidth="2dp"
            app:strokeColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edit_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/edit_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/one_jockey"
            android:paddingLeft="20dp"
            android:paddingTop="2dp"
            android:paddingRight="20dp"
            android:paddingBottom="2dp"
            android:text="@string/edit"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:strokeWidth="2dp"
            app:strokeColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_button"
            app:layout_constraintStart_toEndOf="@+id/create_button" />

        <Button
            android:id="@+id/delete_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/one_jockey"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:shapeAppearance="@style/ShapeAppearance.f_hero.right_round"
            app:backgroundTint="@color/white"
            app:strokeWidth="2dp"
            app:strokeColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>